--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/jpg" href="file:///home/chronos/u-57ac2e065dd00c70a8efb54a3029a116bdc0dec6/MyFiles/Downloads/2024_01_12_0en_Kleki.png"/>
     <title>Fire Search</title>
     <style>
       body {
@@ -68,6 +69,7 @@
       <select id="website" name="website">
         <option value="canvas">Canvas</option>
         <option value="chatgpt">ChatGPT</option>
+        <option value="espn">ESPN</option>
         <option value="fire writer">Fire Writer</option>
         <option value="fire calculator">Fire Calculator</option>
         <option value="games">Games</option>
@@ -76,7 +78,7 @@
         <option value="help">Help</option>
         <option value="music">Music</option>
         <option value="nitro type">Nitro Type</option>
-        <option value="youtube">YouTube</option>
+        <option value="youtube">
       </select>
 
       <label for="search">Search:</label>
@@ -114,8 +116,11 @@
           window.open("https://www.nitrotype.com/garage");
         } else if (website === "games") {
           window.open("https://galatic.hop.sh/");
+        } else if (website === "espn") {
+          window.open("https://www.espn.com/");
         }
       }
     </script>
   </body>
 </html>
+
