--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/jpg" href="file:///home/chronos/u-57ac2e065dd00c70a8efb54a3029a116bdc0dec6/MyFiles/Downloads/2024_01_12_0en_Kleki.png"/>
     <title>Fire Search</title>
     <style>
       body {
@@ -78,7 +77,7 @@
         <option value="help">Help</option>
         <option value="music">Music</option>
         <option value="nitro type">Nitro Type</option>
-        <option value="youtube">
+        <option value="youtube">YouTube</option>
       </select>
 
       <label for="search">Search:</label>
@@ -123,4 +122,3 @@
     </script>
   </body>
 </html>
-
