--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <label for="website">Select Website:</label>
       <select id="website" name="website">
         <option value="canvas">Canvas</option>
+        <option value="capcut">Capcut</option>
         <option value="chatgpt">ChatGPT</option>
         <option value="espn">ESPN</option>
         <option value="fire writer">Fire Writer</option>
@@ -115,10 +116,11 @@
           window.open("https://www.nitrotype.com/garage");
         } else if (website === "games") {
           window.open("https://galatic.hop.sh/");
-        } else if (website === "espn") {
-          window.open("https://www.espn.com/");
+        } else if (website === "capcut") {
+          window.open("https://www.capcut.com/my-edit?start_tab=video");
         }
       }
     </script>
   </body>
 </html>
+
