--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <option value="fire writer">Fire Writer</option>
         <option value="fire calculator">Fire Calculator</option>
         <option value="games">Games</option>
+        <option value="coding">Coding</option>
         <option value="google">Google</option>
         <option value="google translate">Google Translate</option>
         <option value="help">Help</option>
@@ -118,6 +119,8 @@
           window.open("https://galatic.hop.sh/");
         } else if (website === "capcut") {
           window.open("https://www.capcut.com/my-edit?start_tab=video");
+          } else if (website === "coding") {
+          window.open("https://github.com/");
         }
       }
     </script>
