--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <option value="fire writer">Fire Writer</option>
         <option value="fire calculator">Fire Calculator</option>
         <option value="games">Games</option>
-        <option value="coding">Coding</option>
+        <option value="coding">Github</option>
         <option value="google">Google</option>
         <option value="google translate">Google Translate</option>
         <option value="help">Help</option>
