--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
           window.open("https://www.capcut.com/my-edit?start_tab=video");
         } else if (website === "coding") {
           window.open("https://github.com/");
+          } else if (website === "espn") {
+          window.open("https://www.espn.com/");
+
         }
       }
     </script>
