--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             "https://www.youtube.com/results?search_query=" + searchQuery
           );
           
-        if (website === "wikipedia") {
+        } else if (website === "wikipedia") {
           window.open("https://en.wikipedia.org/wiki/" + searchQuery);
           
         } else if (website === "music") {
