--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         background-color: #111;
-        color: #fff;
+        color: #ffffff;
         margin: 20px;
       }
 
@@ -24,7 +24,7 @@
       form {
         max-width: 400px;
         margin: 0 auto;
-        background-color: #333;
+        background-color: #ffffff;
         padding: 20px;
         border-radius: 10px;
       }
@@ -43,7 +43,7 @@
         margin-bottom: 10px;
         box-sizing: border-box;
         background-color: #555;
-        color: #fff;
+        color: #ffffff;
         border: 1px solid #888;
         border-radius: 5px;
       }
