--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #ffffff;
-        color: #ffffff;
-        margin: 20px;
+         margin: 20px;
+      padding: 0;
+      background-image: url('file:///home/chronos/u-57ac2e065dd00c70a8efb54a3029a116bdc0dec6/MyFiles/Downloads/2024_01_12_0en_Kleki.png'); /* Replace 'your-background-image.jpg' with the actual path to your image */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      font-family: 'Arial', sans-serif; /* Choose your preferred font */
+      color: #ffffff; /* Set text color to contrast with the background */
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       }
 
       h1 {
