--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
          margin: 20px;
       padding: 0;
-      background-image: url('file:///home/chronos/u-57ac2e065dd00c70a8efb54a3029a116bdc0dec6/MyFiles/Downloads/2024_01_12_0en_Kleki.png'); /* Replace 'your-background-image.jpg' with the actual path to your image */
+      background-image: url('2024_01_12_0en_Kleki.png'); /* Replace 'your-background-image.jpg' with the actual path to your image */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
