--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-         margin: 20px;
-      padding: 0;
-      background-image: url('2024_01_12_0en_Kleki.png'); /* Replace 'your-background-image.jpg' with the actual path to your image */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      font-family: 'Arial', sans-serif; /* Choose your preferred font */
-      color: #ffffff; /* Set text color to contrast with the background */
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+        background-color: #ffffff;
+        color: #ffffff;
+        margin: 20px;
       }
+       .emoji {
+            position: absolute;
+            font-size: 2rem; /* Adjust the size as needed */
+        }
+
+        .emoji1 {
+            top: 50px; /* Adjust the vertical position */
+            left: 50px; /* Adjust the horizontal position */
+        }
+
+        .emoji2 {
+            top: 100px; /* Adjust the vertical position */
+            left: 150px; /* Adjust the horizontal position */
+            font-size: 3rem; /* Adjust the size as needed */
+        }
 
       h1 {
         text-align: center;
@@ -142,6 +146,16 @@
 
         }
       }
+      <div class="emoji emoji1">🔥</div>
+    <div class="emoji emoji2">🔥</div>
+      <div class="emoji emoji1">🔥</div>
+    <div class="emoji emoji2">🔥</div>
+      <div class="emoji emoji1">🔥</div>
+    <div class="emoji emoji2">🔥</div>
+      <div class="emoji emoji1">🔥</div>
+    <div class="emoji emoji2">🔥</div>
+      <div class="emoji emoji1">🔥</div>
+    <div class="emoji emoji2">🔥</div>
     </script>
   </body>
 </html>
