--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Fire Search</title>
     <style>
       body {
@@ -11,26 +12,14 @@
         color: #ffffff;
         margin: 20px;
       }
-       .emoji {
-            position: absolute;
-            font-size: 10rem; /* Adjust the size as needed */
-        }
-
-        .emoji1 {
-            top: 100px; /* Adjust the vertical position */
-            left: 50px; /* Adjust the horizontal position */
-        }
-
-        .emoji2 {
-            top: 100px; /* Adjust the vertical position */
-            left: 150px; /* Adjust the horizontal position */
-            font-size: 6rem; /* Adjust the size as needed */
-        }
 
       h1 {
         text-align: center;
         color: #ff5733; /* Flame color */
       }
+      h2 {
+        text-align: right;
+      } 
       p {
         text-align: center;
         color: #ff5733; /* Flame color */
@@ -77,6 +66,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
+    <h2><span style="font-size: 26px">🔥</span></h2>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
@@ -146,16 +136,6 @@
 
         }
       }
-      <div class="emoji emoji1">🔥</div>
-    <div class="emoji emoji2">🔥</div>
-      <div class="emoji emoji1">🔥</div>
-    <div class="emoji emoji2">🔥</div>
-      <div class="emoji emoji1">🔥</div>
-    <div class="emoji emoji2">🔥</div>
-      <div class="emoji emoji1">🔥</div>
-    <div class="emoji emoji2">🔥</div>
-      <div class="emoji emoji1">🔥</div>
-    <div class="emoji emoji2">🔥</div>
     </script>
   </body>
 </html>
