--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/Downloads/favicon.ico">
     <title>Fire Search</title>
     <style>
       body {
@@ -66,7 +66,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 26px">🔥</span></h2>
+    <h2><span style="font-size: 100px">🔥</span></h2>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
