--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/Downloads/favicon.ico">
+    <link rel="icon" type="downloads/x-icon" href="/Downloads/favicon.ico">
     <title>Fire Search</title>
     <style>
       body {
@@ -12,6 +12,21 @@
         color: #ffffff;
         margin: 20px;
       }
+      .container { 
+            position: relative; 
+        } 
+  
+        .containerbackground { 
+            margin: 3rem; 
+            position: absolute; 
+            top: 0; 
+            left: 0; 
+            bottom: 0; 
+            z-index: -1; 
+            transform: rotate(300deg); 
+            -webkit-transform: rotate(300deg); 
+            color: #c6afaf; 
+        } 
 
       h1 {
         text-align: center;
@@ -67,6 +82,10 @@
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
     <h2><span style="font-size: 100px">🔥</span></h2>
+    <div class="container"> 
+        <div class="containerbackground"> 
+            🔥 
+        </div>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
