--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             transform: rotate(300deg); 
             -webkit-transform: rotate(300deg); 
             color: #c6afaf; 
-          size: 200rem;
         } 
 
       h1 {
@@ -85,7 +84,7 @@
     <h2><span style="font-size: 100px">🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
-            🔥 
+            <big>🔥</big>
         </div>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
