--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h2><span style="font-size: 100px">🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
-            <big>🔥</big>
+            <font size="10">🔥</font>
         </div>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
