Most Hopeful test 7

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h2><span style="font-size: 100px">🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
-            <font size="1000">🔥</font>
+            <span="font size= 1000px">🔥</span>
         </div>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
