--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         color: #ff5733; /* Flame color */
       }
       h2 {
-        text-align: right;
+        text-align: center;
+         position: relative; 
       } 
       p {
         text-align: center;
@@ -81,7 +82,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 100px">🔥</span></h2>
+    <h2><span style="font-size: 1000px">🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
             <span="font size= 1000px">🔥</span>
