--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       h2 {
         text-align: center;
          position: relative; 
+        position: absolute; 
       } 
       p {
         text-align: center;
@@ -82,7 +83,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 1000px">🔥</span></h2>
+    <h2><span style="font-size: 500px">🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
             <span="font size= 1000px">🔥</span>
