--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 500px">🔥</span></h2>
+    <h2><span style="font-size: 500px">🔥 🔥</span></h2>
     <div class="container"> 
         <div class="containerbackground"> 
             <span="font size= 1000px">🔥</span>
