--- a/index.html
+++ b/index.html
@@ -12,21 +12,6 @@
         color: #ffffff;
         margin: 20px;
       }
-      .container { 
-            position: relative; 
-        } 
-  
-        .containerbackground { 
-            margin: 20rem; 
-            position: absolute; 
-            top: 0; 
-            left: 0; 
-            bottom: 0; 
-            z-index: -1; 
-            transform: rotate(300deg); 
-            -webkit-transform: rotate(300deg); 
-            color: #c6afaf; 
-        } 
 
       h1 {
         text-align: center;
@@ -83,11 +68,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 500px">🔥 🔥</span></h2>
-    <div class="container"> 
-        <div class="containerbackground"> 
-            <span="font size= 1000px">🔥</span>
-        </div>
+    <h2><span style="font-size: 250px">🔥 🔥 🔥 🔥 🔥 🔥 🔥</span></h2>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
