--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
       h2 {
         text-align: center;
-         position: relative; 
+         position: absolute; 
         overflow: hidden;
       } 
       p {
