--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         background-color: #333;
         padding: 20px;
         border-radius: 10px;
+        position: relative;
       }
 
       label {
