--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <body>
     <h1>Fire Search 🔥</h1>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 250px">🔥 🔥 🔥</span></h2>
+    <h2><span style="font-size: 250px">🔥 🔥 🔥 🔥 🔥 🔥</span></h2>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
