--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
   </head>
   <body>
     <h1>Fire Search 🔥</h1>
-    <h2><span style="font-size: 300px">🔥 🔥 🔥</span></h2>
+    <h2><span style="font-size: 300px">🔥 🔥 🔥 🔥 🔥 🔥</span></h2>
     <p><b>Please don't abuse this site!</b></p>
-    <h2><span style="font-size: 200 px">🔥 🔥 🔥 🔥 🔥</span></h2>
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
