--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </style>
   </head>
   <body>
-    <h1>Fire Search 🔥</h1>
+    <h1><span style="font-size: 200px">Fire Search 🔥</span></h1>
     <h2><span style="font-size: 450px">🔥 🔥 </span></h2>
     <p><b>Please don't abuse this site!</b></p>
 
