--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #ffffff;
-        color: #ffffff;
+        background-color: #ffffff; /* white */
+        color: #ffffff; /* white */
         margin: 20px;
       }
 
@@ -39,7 +39,7 @@
       label {
         display: block;
         margin-top: 10px;
-        color: #ff5733;
+        color: #ff5733; /* Flame color */
       }
 
       select,
