--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         background-color: #ffffff; /* white */
         color: #ffffff; /* white */
         margin: 20px;
+        background-image: linear-gradient(90deg, #161578, #b81055);
       }
 
       h1 {
