Add Weekly quiz

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <option value="help">Help</option>
         <option value="music">Music</option>
         <option value="nitro type">Nitro Type</option>
+        <option value="nitro type">Nitro Type</option>
+        <option value="weekly quiz">Weekly Quiz</option>
        <option value="wikipedia">Wikipedia</option>
         <option value="youtube">YouTube</option>
       </select>
@@ -137,6 +139,8 @@
           window.open("https://github.com/");
           } else if (website === "espn") {
           window.open("https://www.espn.com/");
+          } else if (website === "weekly quiz") {
+          window.open("https://7fxjy4.csb.app/");
 
         }
       }
