Add Text to speech converter

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <option value="music">Music</option>
         <option value="nitro type">Nitro Type</option>
         <option value="nitro type">Nitro Type</option>
+        <option value="firetexttospeech">Fire Text to Speech</option>
         <option value="weekly quiz">Weekly Quiz</option>
        <option value="wikipedia">Wikipedia</option>
         <option value="youtube">YouTube</option>
@@ -141,6 +142,9 @@
           window.open("https://www.espn.com/");
           } else if (website === "weekly quiz") {
           window.open("https://7fxjy4.csb.app/");
+          } else if (website === "firetexttospeech") {
+          window.open("https://xtq6zr.csb.app/");
+
 
         }
       }
