--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
         <option value="capcut">Capcut</option>
         <option value="chatgpt">ChatGPT</option>
         <option value="espn">ESPN</option>
-        <option value="fire calculator">Fire Calculator</option>
-        <option value="fire writer">Fire Writer</option>
+        <option value="fire calculator">Fire Calculator 🔥</option>
+        <option value="fire writer">Fire Writer 🔥</option>
         <option value="games">Games</option>
         <option value="coding">Github</option>
         <option value="google">Google</option>
         <option value="google translate">Google Translate</option>
-        <option value="help">Help</option>
+        <option value="help">Help 🔥</option>
         <option value="music">Music</option>
         <option value="nitro type">Nitro Type</option>
-        <option value="firetexttospeech">Fire Text to Speech</option>
-        <option value="weekly quiz">Weekly Quiz</option>
+        <option value="firetexttospeech">Fire Text to Speech 🔥</option>
+        <option value="weekly quiz">Weekly Quiz 🔥</option>
        <option value="wikipedia">Wikipedia</option>
         <option value="youtube">YouTube</option>
       </select>
@@ -147,6 +147,7 @@
 
         }
       }
+      <p>* the 🔥 means I made it</p>
     </script>
   </body>
 </html>
