--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     <h1><span style="font-size: 100px">🔥 Fire Search 🔥</span></h1>
     <h2><span style="font-size: 475px">🔥 🔥 </span></h2>
     <p><b>Please don't abuse this site!</b></p>
+    <p>*The 🔥 symbol means I made it</p>
+
 
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
       <label for="website">Select Website:</label>
@@ -143,8 +145,6 @@
           window.open("https://7fxjy4.csb.app/");
           } else if (website === "firetexttospeech") {
           window.open("https://xtq6zr.csb.app/");
-
-<p>* the 🔥 means I made it</p>
 
         }
       }
