--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
       <input type="submit" value="Search" />
     </form>
+<p><b>*The 🔥 symbol means I made it</b></p>
 
     <script>
       function searchWebsite() {
