added fire says

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <option value="chatgpt">ChatGPT</option>
         <option value="espn">ESPN</option>
         <option value="fire calculator">Fire Calculator 🔥</option>
+        <option value="fire says">Fire Says 🔥</option>
         <option value="fire writer">Fire Writer 🔥</option>
         <option value="games">Games</option>
         <option value="coding">Github</option>
@@ -145,6 +146,8 @@
           window.open("https://7fxjy4.csb.app/");
           } else if (website === "firetexttospeech") {
           window.open("https://xtq6zr.csb.app/");
+          } else if (website === "fire says") {
+          window.open("https://jfx6tl.csb.app/");
 
         }
       }
