--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <option value="canvas">Canvas</option>
         <option value="capcut">Capcut</option>
         <option value="chatgpt">ChatGPT</option>
+        <option value="fire wall game">Crack the Fire Wall Game 🔥</option>
         <option value="espn">ESPN</option>
         <option value="fire calculator">Fire Calculator 🔥</option>
         <option value="fire says">Fire Says 🔥</option>
@@ -148,6 +149,8 @@
           window.open("https://xtq6zr.csb.app/");
           } else if (website === "fire says") {
           window.open("https://jfx6tl.csb.app/");
+          } else if (website === "fire wall game") {
+          window.open("https://5psfhw.csb.app/");
 
         }
       }
