--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           } else if (website === "fire says") {
           window.open("https://jfx6tl.csb.app/");
           } else if (website === "fire wall game") {
-          window.open("https://5psfhw.csb.app/");
+          window.open("https://drgl39.csb.app/");
 
         }
       }
