Fire says is it's own website so switch to new website

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           } else if (website === "firetexttospeech") {
           window.open("https://xtq6zr.csb.app/");
           } else if (website === "fire says") {
-          window.open("https://jfx6tl.csb.app/");
+          window.open("https://firesays.netlify.app/");
           } else if (website === "fire wall game") {
           window.open("https://drgl39.csb.app/");
 
