same but for text to speech

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           } else if (website === "weekly quiz") {
           window.open("https://7fxjy4.csb.app/");
           } else if (website === "firetexttospeech") {
-          window.open("https://xtq6zr.csb.app/");
+          window.open("https://fireaitalker.netlify.app/");
           } else if (website === "fire says") {
           window.open("https://firesays.netlify.app/");
           } else if (website === "fire wall game") {
