--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         } else if (website === "nitro type") {
           window.open("https://www.nitrotype.com/garage");
         } else if (website === "games") {
-          window.open("https://galatic.hop.sh/");
+          window.open("https://55gms.net/");
         } else if (website === "capcut") {
           window.open("https://www.capcut.com/my-edit?start_tab=video");
         } else if (website === "coding") {
