--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <option value="espn">ESPN</option>
         <option value="fire calculator">Fire Calculator 🔥</option>
         <option value="fire says">Fire Says 🔥</option>
+        <option value="fire translate">Fire Translate 🔥</option>
         <option value="fire writer">Fire Writer 🔥</option>
         <option value="games">Games</option>
         <option value="coding">Github</option>
@@ -151,6 +152,8 @@
           window.open("https://firesays.netlify.app/");
           } else if (website === "fire wall game") {
           window.open("https://firewallgame.netlify.app/");
+          } else if (website === "fire translate") {
+          window.open("https://firetranslate.netlify.app/");
 
         }
       }
