--- a/index.html
+++ b/index.html
@@ -1,181 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="downloads/x-icon" href="/Downloads/favicon.ico">
-    <title>Loading - Fire Search</title>
+    <title>Fire Search</title>
     <style>
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #ffffff; /* white */
-            color: #ffffff; /* white */
-            margin: 0;
-            overflow: hidden;
-        }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #ffffff; /* white */
+        color: #ffffff; /* white */
+        margin: 20px;
+        background-image: linear-gradient(90deg, #161578, #b81055);
+      }
 
-        #loading-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(90deg, #161578, #b81055);
-            animation: fadeIn 1s ease-out;
-        }
+      h1 {
+        text-align: center;
+        color: #ff5733; /* Flame color */
+      }
+      h2 {
+        text-align: center;
+         position: absolute; 
+        overflow: hidden;
+      } 
+      p {
+        text-align: center;
+        color: #ff5733; /* Flame color */
+      }
 
-        #loading-spinner {
-            border: 8px solid #fff;
-            border-top: 8px solid #ff5733; /* Flame color */
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-        }
+      form {
+        max-width: 500px;
+        margin: 0 auto;
+        background-color: #333;
+        padding: 20px;
+        border-radius: 20px;
+        position: relative;
+      }
 
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
+      label {
+        display: block;
+        margin-top: 10px;
+        color: #ff5733; /* Flame color */
+      }
 
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
+      select,
+      input {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        background-color: #555;
+        color: #fff;
+        border: 1px solid #888;
+        border-radius: 5px;
+      }
 
-        /* Hide the content until the page is fully loaded */
-        body > * {
-            display: none;
-        }
+      input[type="submit"] {
+        background-color: #ff5733; /* Flame color */
+        color: white;
+        cursor: pointer;
+      }
 
-        h1,
-        h2,
-        p,
-        form,
-        script {
-            display: block; /* Display the content */
-        }
-
-        body {
-            background-image: linear-gradient(90deg, #161578, #b81055);
-        }
-
-        h1 {
-            text-align: center;
-            color: #ff5733; /* Flame color */
-        }
-
-        h2 {
-            text-align: center;
-            position: absolute;
-            overflow: hidden;
-        }
-
-        p {
-            text-align: center;
-            color: #ff5733; /* Flame color */
-        }
-
-        form {
-            max-width: 500px;
-            margin: 0 auto;
-            background-color: #333;
-            padding: 20px;
-            border-radius: 20px;
-            position: relative;
-        }
-
-        label {
-            display: block;
-            margin-top: 10px;
-            color: #ff5733; /* Flame color */
-        }
-
-        select,
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-            background-color: #555;
-            color: #fff;
-            border: 1px solid #888;
-            border-radius: 5px;
-        }
-
-        input[type="submit"] {
-            background-color: #ff5733; /* Flame color */
-            color: white;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #ff6f47; /* Slightly lighter flame color on hover */
-        }
+      input[type="submit"]:hover {
+        background-color: #ff6f47; /* Slightly lighter flame color on hover */
+      }
     </style>
-</head>
-<body>
-    <div id="loading-container">
-        <div id="loading-spinner"></div>
-    </div>
-
+  </head>
+  <body>
     <h1><span style="font-size: 100px">🔥 Fire Search 🔥</span></h1>
     <h2><span style="font-size: 475px">🔥 🔥 </span></h2>
     <p><b>Please don't abuse this site!</b></p>
 
+
     <form action="#" method="post" onsubmit="searchWebsite(); return false;">
-        <label for="website">Select Website:</label>
-        <select id="website" name="website">
-            <option value="canvas">Canvas</option>
-            <option value="capcut">Capcut</option>
-            <!-- Add other options as needed -->
-        </select>
+      <label for="website">Select Website:</label>
+      <select id="website" name="website">
+        <option value="canvas">Canvas</option>
+        <option value="capcut">Capcut</option>
+        <option value="chatgpt">ChatGPT</option>
+        <option value="fire wall game">Crack the Fire Wall Game 🔥</option>
+        <option value="espn">ESPN</option>
+        <option value="fire calculator">Fire Calculator 🔥</option>
+        <option value="fire says">Fire Says 🔥</option>
+        <option value="fire translate">Fire Translate 🔥</option>
+        <option value="fire writer">Fire Writer 🔥</option>
+        <option value="games">Games</option>
+        <option value="coding">Github</option>
+        <option value="google">Google</option>
+        <option value="google translate">Google Translate</option>
+        <option value="help">Help 🔥</option>
+        <option value="music">Music</option>
+        <option value="nitro type">Nitro Type</option>
+        <option value="firetexttospeech">Fire Text to Speech 🔥</option>
+        <option value="weekly quiz">Weekly Quiz 🔥</option>
+       <option value="wikipedia">Wikipedia</option>
+        <option value="youtube">YouTube</option>
+      </select>
 
-        <label for="search">Search:</label>
-        <input type="text" id="search" name="search" required />
+      <label for="search">Search:</label>
+      <input type="text" id="search" name="search" required />
 
-        <input type="submit" value="Search" />
+      <input type="submit" value="Search" />
     </form>
-
-    <p><b>*The 🔥 symbol means I made it</b></p>
+<p><b>*The 🔥 symbol means I made it</b></p>
 
     <script>
-        function searchWebsite() {
-            var website = document.getElementById("website").value;
-            var searchQuery = document.getElementById("search").value;
+      function searchWebsite() {
+        var website = document.getElementById("website").value;
+        var searchQuery = document.getElementById("search").value;
 
-            // Your existing searchWebsite function code here
+        if (website === "google") {
+          window.open("https://www.google.com/search?q=" + searchQuery);
+        } else if (website === "youtube") {
+          window.open(
+            "https://www.youtube.com/results?search_query=" + searchQuery
+          );
+          
+        } else if (website === "wikipedia") {
+          window.open("https://en.wikipedia.org/wiki/" + searchQuery);
+          
+        } else if (website === "music") {
+          window.open("https://beatbump.io/search/" + searchQuery);
+        } else if (website === "canvas") {
+          window.open("https://canvas.houstonisd.org/");
+        } else if (website === "chatgpt") {
+          window.open("https://chat.openai.com/");
+        } else if (website === "help") {
+          window.open("https://pv4stl.csb.app/");
+        } else if (website === "google translate") {
+          window.open("https://translate.google.com/");
+        } else if (website === "fire writer") {
+          window.open("https://sc22r5.csb.app/");
+        } else if (website === "fire calculator") {
+          window.open("https://prcq7n.csb.app/");
+        } else if (website === "nitro type") {
+          window.open("https://www.nitrotype.com/garage");
+        } else if (website === "games") {
+          window.open("https://55gms.net/");
+        } else if (website === "capcut") {
+          window.open("https://www.capcut.com/my-edit?start_tab=video");
+        } else if (website === "coding") {
+          window.open("https://github.com/");
+          } else if (website === "espn") {
+          window.open("https://www.espn.com/");
+          } else if (website === "weekly quiz") {
+          window.open("https://7fxjy4.csb.app/");
+          } else if (website === "firetexttospeech") {
+          window.open("https://fireaitalker.netlify.app/");
+          } else if (website === "fire says") {
+          window.open("https://firesays.netlify.app/");
+          } else if (website === "fire wall game") {
+          window.open("https://firewallgame.netlify.app/");
+          } else if (website === "fire translate") {
+          window.open("https://firetranslate.netlify.app/");
 
-            // Simulate a delay to showcase the loading animation
-            setTimeout(function () {
-                // Remove the loading container and display the content
-                document.getElementById("loading-container").style.display = "none";
-                document.body.style.overflow = "auto"; // Enable scrolling
-                document.body.style.display = "block"; // Display the main content
-            }, 2000); // Adjust the delay time as needed
         }
-
-        document.addEventListener("DOMContentLoaded", function () {
-            // Simulate a delay to showcase the loading animation
-            setTimeout(function () {
-                // Remove the loading container and display the content
-                document.getElementById("loading-container").style.display = "none";
-                document.body.style.overflow = "auto"; // Enable scrolling
-                document.body.style.display = "block"; // Display the main content
-            }, 2000); // Adjust the delay time as needed
-        });
+      }
     </script>
-</body>
+  </body>
 </html>
