--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <option value="chatgpt">ChatGPT</option>
         <option value="fire wall game">Crack the Fire Wall Game 🔥</option>
         <option value="espn">ESPN</option>
+        <option value="fireai">Fire AI (ALPHA TESTING) 🔥</option>
         <option value="fire calculator">Fire Calculator 🔥</option>
         <option value="fire says">Fire Says 🔥</option>
         <option value="fire translate">Fire Translate 🔥</option>
@@ -154,6 +155,8 @@
           window.open("https://firewallgame.netlify.app/");
           } else if (website === "fire translate") {
           window.open("https://firetranslate.netlify.app/");
+          } else if (website === "fireai") {
+          window.open("https://nfcgpd.csb.app/");
 
         }
       }
