--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           } else if (website === "fire translate") {
           window.open("https://firetranslate.netlify.app/");
           } else if (website === "fireai") {
-          window.open("https://nfcgpd.csb.app/");
+          window.open("https://fireai.netlify.app/");
 
         }
       }
