--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         } else if (website === "nitro type") {
           window.open("https://www.nitrotype.com/garage");
         } else if (website === "games") {
-          window.open("https://55gms.net/");
+          window.open("https://alvinisd.lol/");
         } else if (website === "capcut") {
           window.open("https://www.capcut.com/my-edit?start_tab=video");
         } else if (website === "coding") {
